--- a/index.html
+++ b/index.html
@@ -32,7 +32,30 @@
         </header>
 
         <div class="realtors">
-            Top 3 realtors
+            <h3 class="heading-3">Top 3 realtors</h3> 
+            <div class="realtors__list">
+                <div class="realtors__item">
+                    <img src="img/realtor-1.jpeg" alt="Realtor 1" class="realtors__img">
+                    <h4 class="realtors__name heading-4 heading-4--light">Erik Feinman</h4>
+                    <p class="realtors__sales">
+                        245 houses sold
+                    </p>
+                </div>
+                 <div class="realtors__item">
+                    <img src="img/realtor-2.jpeg" alt="Realtor 2" class="realtors__img">
+                    <h4 class="realtors__name heading-4 heading-4--light">Kim Brown</h4>
+                    <p class="realtors__sales">
+                        212 houses sold
+                    </p>
+                </div>
+                 <div class="realtors__item">
+                    <img src="img/realtor-3.jpeg" alt="Realtor 3" class="realtors__img">
+                    <h4 class="realtors__name heading-4 heading-4--light">Toby Ramsey</h4>
+                    <p class="realtors__sales">
+                        198 houses sold
+                    </p>
+                </div>
+            </div>
         </div>
 
         <section class="features">
